--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,24 @@ build
 .classpath
 
 .project
+/bin/
+/Libs/
+/.settings/
+/.classpath
+.svn/
+
+/bin/
+/Libs/
+/.settings/
+.classpath
+.svn/
+Reports/
+.prj
+.project
+.cache/
+.Test Suites
+/build.gradle
+/appium.log
+/console.properties
+Petstore.prj
+settings
